@@ -75,6 +75,7 @@ public class SimTemplateApplication extends PiccoloPhetApplication {
             public ITabbedModulePane createTabbedPane() {
                 _tabbedModulePane = new TabbedModulePanePiccolo();
                 _tabbedModulePane.setSelectedTabColor( SimTemplateConstants.SELECTED_TAB_COLOR );
+                _tabbedModulePane.setUnselectedTabColor( SimTemplateConstants.UNSELECTED_TAB_COLOR );
                 return _tabbedModulePane;
             }
         };
